--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,18 +3,37 @@ author: AndyAndreiH
 authors: [Migs84]
 website: http://katgamestudios.com/
 main: com.katgamestudios.andyandreih.overseer.admin.OverseerAdmin
-version: 0.0.1-SNAPSHOT
+version: 0.0.3-SNAPSHOT
 depend: [OverseerMain]
 database: false
 commands:
    tp:
-      description: Teleports the user
-      usage: /tp <sourceUser> <destinationUser/destinationLocation>
+      description: Teleports the player
+      usage: /tp <srcPlayer> <dstPlayer/dstLocation>
+   freeze:
+      description: Freezes the player
+      usage: /freeze <player>
+   unfreeze:
+      description: Unfreezes the player
+      usage: /unfreeze <player>
 permissions:
    overseer.admin.*:
       description: Master permission node
       children:
-         overseer.auth.tp: true
+         overseer.admin.tp: true
+         overseer.admin.freeze: true
+         overseer.admin.unfreeze: true
    overseer.admin.tp:
       description: Gives access to the teleportation command
+      default: op
+   overseer.admin.freeze:
+      description: Gives access to the freezing command
+      default: op
+   overseer.admin.unfreeze:
+      description: Gives access to the unfreezing command
+      default: op
+      children:
+         overseer.admin.unfreeze.self: true
+   overseer.admin.unfreeze.self:
+      description: Allows the player to unfreeze self
       default: op
