--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.katgamestudios.andyandreih</groupId>
             <artifactId>OverseerMain</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.1</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
